--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,1 +1,18 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <title>Eco Tip Board</title>
+    <!-- You can add favicon, manifest, etc. here -->
+  </head>
+  <body>
+    <!-- React will render your app into this div -->
+    <div id="root"></div>
+    <!-- The bundled JS will be injected here by react-scripts -->
+  </body>
+</html>
 
